# buenum-synth

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml  test_bool_1.sl  test_bool_2.sl
benchmarks/icfp_benchmarks/icfp-problems/: 5_1000.sl
docs/: Note.md
scripts/: plot_metrics.py  plot_metrics_ecache.py  plot_metrics_vec_pts.py
src/: main.rs  parser.rs  solver.rs
src/parser/: ast.rs  eval.rs  grammar.pest  visitor.rs
src/solver/: baseline_solver.rs  egg_enum.rs  egg_solver.rs
