[package]
name = "buenum-synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1" }
egg = "0.9.5"
# egglog = "0.1.0"
log4rs = "1.3.0"
pest = "2.7.7"
pest_derive = { version = "2.7.7", features = ["grammar-extras"] } # enable `#tag`
anyhow = "1.0.79"
cfg = "0.8.0"
z3 = "0.12.0"
# z3-sys = "0.8.1" # using the raw z3-sys crate is highly discouraged
