[package]
name = "buenum-synth"
version = "0.1.0"
edition = "2021"
description = "Bottom-up Enumerative Synthesizer using Egg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cfg = "0.8.0"
clap = "4.5.1"        # CLI Arguments: clap
# egg = { git = "https://github.com/efJerryYang/egg-increm.git", tag = "v0.9.5" }
# egg = { git = "https://github.com/efJerryYang/egg-increm.git", branch = "dev" } # commit_hash = 9fb8d27
egg = { path = "../egg-increm/" }
env = "0.0.0"
log4rs = "1.3.0"      # Log4j-like logging
pest = "2.7.7"        # Parser Generator
pest_derive = "2.7.7"
strum = "0.26"        # Enum utils (to iter())
strum_macros = "0.26"
z3 = "0.12.0"         # SMT Solver
z3-sys = "=0.8.1"
#
#[build-dependencies]
#z3-sys = "=0.8.1"

env_logger = "0.9.0"  # Logging
itertools = "0.12.1"  # Itertools
async-std = {version = "1.10.0", features = ["attributes"]}
indexmap = "1.8.1"
